--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.9",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-i18n": "^8.3.1"
   }
 }
