--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "speed-measure-webpack-plugin": "^1.2.3",
     "style-loader": "^0.20.3",
     "url-loader": "^1.1.2",
@@ -46,11 +47,14 @@
     "webpack": "^4.25.1",
     "webpack-build-notifier": "^0.1.30",
     "webpack-cli": "^3.1.2",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.1",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "element-ui": "^2.4.9",
+    "node-bash-title": "0.0.2",
     "vue": "^2.5.17",
     "vue-i18n": "^8.3.1"
   }
