--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/68wangxianming/rebuildVueCli#readme",
   "devDependencies": {
+    "autoprefixer": "^9.3.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.5",
@@ -35,6 +36,7 @@
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "speed-measure-webpack-plugin": "^1.2.3",
     "style-loader": "^0.20.3",
