--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mini-css-extract-plugin": "^0.4.4",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
+    "screenfull": "^3.3.3",
     "speed-measure-webpack-plugin": "^1.2.3",
     "style-loader": "^0.20.3",
     "url-loader": "^1.1.2",
