--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "element-ui": "^2.4.9",
     "node-bash-title": "0.0.2",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.3.1"
   }
