--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "element-ui": "^2.4.9",
     "node-bash-title": "0.0.2",
     "nprogress": "^0.2.0",
+    "v-viewer": "^1.2.1",
     "vue": "^2.5.17",
     "vue-i18n": "^8.3.1"
   }
